--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/config-plugins": "^10.1.1",
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.0.0",
+    "@google/generative-ai": "^0.24.1",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
@@ -34,6 +35,7 @@
     "expo-clipboard": "^8.0.7",
     "expo-contacts": "^15.0.10",
     "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-file-system": "~18.1.10",
     "expo-image": "~2.4.0",
     "expo-image-manipulator": "^14.0.7",
@@ -43,6 +45,7 @@
     "expo-localization": "^16.1.6",
     "expo-location": "~18.1.6",
     "expo-media-library": "^18.2.0",
+    "expo-notifications": "~0.31.4",
     "expo-secure-store": "~14.2.4",
     "expo-speech-recognition": "^2.1.1",
     "expo-splash-screen": "^31.0.10",
@@ -67,9 +70,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-toast-message": "^2.3.0",
-    "expo-notifications": "~0.31.4",
-    "expo-device": "~7.1.4"
+    "react-native-toast-message": "^2.3.0"
   },
   "expo": {
     "doctor": {
