--- a/app.json
+++ b/app.json
@@ -25,7 +25,9 @@
         "expo-notifications",
         {
           "icon": "./assets/icon.png",
-          "color": "#ffffff"
+          "color": "#ffffff",
+          "defaultChannel": "default",
+          "enableBackgroundRemoteNotifications": false
         }
       ]
     ],
@@ -67,6 +69,8 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.only2u.only2u",
+      "googleServicesFile": "./google-services.json",
+      "useNextNotificationsApi": true,
       "permissions": [
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO",
